--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 vignettes/figure
 *.Rproj
 clusterVignette.md
-vignettes/R_cache
-vignettes/R_figure
+vignettes/*_cache
+vignettes/*_figure
+vignettes/*_files
